@@ -8,6 +8,7 @@ list of GStreamer elements:
 	- burn
 	- dodge
 	- exclusion
+	- solarize
 
 
 HOW
